--- a/index.html
+++ b/index.html
@@ -70,29 +70,49 @@
           <h2 class="visually-hidden">Strategy</h2>
           <ul class="list">
             <li class-="list-elements">
-              <h3 class="subtitles">Strategy</h3>
-              <p class="paragraph-subtitles">
+              <div class="icons-svg">
+                <svg class="icon-svg" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#antenna" />
+                </svg>
+              </div>
+              <h3 class="second-section-titles">Strategy</h3>
+              <p class="second-section-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class-="list-elements">
-              <h3 class="subtitles">Punctuality</h3>
-              <p class="paragraph-subtitles">
+              <div class="icons-svg">
+                <svg class="icon-svg" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#clock" />
+                </svg>
+              </div>
+              <h3 class="second-section-titles">Punctuality</h3>
+              <p class="second-section-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class-="list-elements">
-              <h3 class="subtitles">Diligence</h3>
-              <p class="paragraph-subtitles">
+              <div class="icons-svg">
+                <svg class="icon-svg" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#diagram" />
+                </svg>
+              </div>
+              <h3 class="second-section-titles">Diligence</h3>
+              <p class="second-section-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class-="list-elements">
-              <h3 class="subtitles">Technologies</h3>
-              <p class="paragraph-subtitles">
+              <div class="icons-svg">
+                <svg class="icon-svg" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#astronaut" />
+                </svg>
+              </div>
+              <h3 class="second-section-titles">Technologies</h3>
+              <p class="second-section-paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -147,6 +167,36 @@
                 <p class="paragraph-subtitles">Product Designer</p>
               </div>
               <a class="link" href="www."> </a>
+              <ul class="team-social-media-list">
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="forth-section-images">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
@@ -155,6 +205,36 @@
                 <p class="paragraph-subtitles">Frontend Developer</p>
               </div>
               <a class="link" href="www."> </a>
+              <ul class="team-social-media-list">
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="forth-section-images">
               <img
@@ -167,6 +247,36 @@
                 <p class="paragraph-subtitles">Marketing</p>
               </div>
               <a class="link" href="www."> </a>
+              <ul class="team-social-media-list">
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="forth-section-images">
               <img
@@ -179,8 +289,43 @@
                 <p class="paragraph-subtitles">UI Designer</p>
               </div>
               <a class="link" href="www."> </a>
+              <ul class="team-social-media-list">
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#twitter" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-media-icon">
+                  <a>
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="fifth-section">
+        <div class="customers-logo container">
+          <h2 class="titles">customers</h2>
         </div>
       </section>
     </main>
