--- a/index.html
+++ b/index.html
@@ -167,36 +167,38 @@
                 <p class="paragraph-subtitles">Product Designer</p>
               </div>
               <a class="link" href="www."> </a>
-              <ul class="team-social-media-list">
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#instagram" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#twitter" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#facebook" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#linkedin" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="forth-section-images">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
@@ -205,36 +207,38 @@
                 <p class="paragraph-subtitles">Frontend Developer</p>
               </div>
               <a class="link" href="www."> </a>
-              <ul class="team-social-media-list">
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#instagram" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#twitter" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#facebook" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#linkedin" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="forth-section-images">
               <img
@@ -247,36 +251,38 @@
                 <p class="paragraph-subtitles">Marketing</p>
               </div>
               <a class="link" href="www."> </a>
-              <ul class="team-social-media-list">
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#instagram" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#twitter" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#facebook" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#linkedin" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="forth-section-images">
               <img
@@ -289,36 +295,38 @@
                 <p class="paragraph-subtitles">UI Designer</p>
               </div>
               <a class="link" href="www."> </a>
-              <ul class="team-social-media-list">
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#instagram" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#twitter" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#facebook" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a>
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#linkedin" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
