--- a/index.html
+++ b/index.html
@@ -333,7 +333,55 @@
       </section>
       <section class="fifth-section">
         <div class="customers-logo container">
-          <h2 class="titles">customers</h2>
+          <h2 class="titles">Customers</h2>
+          <ul clss="customers-list">
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#customers-logo-one" />
+                </svg>
+              </a>
+            </li>
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#customers-logo-two" />
+                </svg>
+              </a>
+            </li>
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#customers-logo-three" />
+                </svg>
+              </a>
+            </li>
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use
+                    href="./images/icons.svg#vector-customer-one"
+                    href="./images/icons.svg#vector-customer-two"
+                    href="./images/icons.svg#vector-customer-three"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#customers-logo-five" />
+                </svg>
+              </a>
+            </li>
+            <li class="customers-element">
+              <a class="customers-link">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#customers-logo-six" />
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -347,6 +395,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-social-media">
+          <p class="second-paragraph">Social media</p>
+          <ul class="footer-social-media-list">
+            <li class="footer-social-media-icon">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
