--- a/portfolio.html
+++ b/portfolio.html
@@ -211,6 +211,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-social-media">
+          <p class="second-paragraph">Social media</p>
+          <ul class="footer-social-media-list">
+            <li class="footer-social-media-icon">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook" />
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-media-list">
+              <a class="footer-social-media-links" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
