--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <section class="forth-section">
         <div class="container">
           <h2 class="titles">Our Team</h2>
-          <ul class="list">
+          <div class="list">
             <li class="forth-section-images">
               <img
                 src="./images/markguerrero.jpg"
@@ -168,28 +168,28 @@
                 <ul class="team-social-media-list">
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin" />
                       </svg>
                     </a>
@@ -206,28 +206,28 @@
                 <ul class="team-social-media-list">
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin" />
                       </svg>
                     </a>
@@ -248,28 +248,28 @@
                 <ul class="team-social-media-list">
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-media-icon">
                     <a class="social-media-links" href="">
-                      <svg width="16" height="16">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin" />
                       </svg>
                     </a>
@@ -287,44 +287,44 @@
               <div class="team-details">
                 <h3 class="subtitles">Daniel Wilson</h3>
                 <p class="paragraph-subtitles">UI Designer</p>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
               <a class="link" href="www."> </a>
-              <ul class="team-social-media-list">
-                <li class="team-social-media-icon">
-                  <a class="social-media-links" href="">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#instagram" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a class="social-media-links" href="">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#twitter" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a class="social-media-links" href="">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#facebook" />
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-media-icon">
-                  <a class="social-media-links" href="">
-                    <svg class="social-media-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
-          </ul>
+          </div>
         </div>
       </section>
       <section class="fifth-section">
-        <div class="customers-logo container">
+        <div class="container">
           <h2 class="titles">Customers</h2>
           <ul clss="customers-list">
             <li class="customers-element">
@@ -379,14 +379,16 @@
     </main>
     <!--Contacts-->
     <footer class="footer-section">
-      <div class="container">
-        <a class="footer-logo logo link" href="./index.html"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="promote-site">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="first-part">
+          <a class="footer-logo logo link" href="./index.html"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="promote-site">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="footer-social-media">
           <p class="second-paragraph">Social media</p>
           <ul class="footer-social-media-list">
@@ -397,21 +399,21 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter" />
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook" />
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin" />
