--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <section class="fifth-section">
         <div class="container">
           <h2 class="titles">Customers</h2>
-          <ul clss="customers-list">
+          <ul clss="customers-content">
             <li class="customers-element">
               <a class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
