--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <section class="fifth-section">
         <div class="container">
           <h2 class="titles">Customers</h2>
-          <ul clss="customers-content">
+          <ul class="customers-content">
             <li class="customers-element">
               <a class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
@@ -350,13 +350,16 @@
             </li>
             <li class="customers-element">
               <a class="customers-link">
-                <svg class="customers-icon" width="104" height="56">
-                  <use
-                    href="./images/icons.svg#vector-customer-one"
-                    href="./images/icons.svg#vector-customer-two"
-                    href="./images/icons.svg#vector-customer-three"
-                  />
+                <svg class="customers-icon" width="25.006" height="27.747">
+                  <use href="./images/icons.svg#vector-customers-one" />
                 </svg>
+                <svg class="customers-icon" width="8.642" height="7.791">
+                  <use href="./images/icons.svg#vector-customers-two" />
+                </svg>
+                <svg class="customers-icon" width="17.398" height="19.306">
+                  <use href="./images/icons.svg#vector-customers-three" />
+                </svg>
+                <p class="vector-paragraph">FOSTER PETERS</p>
               </a>
             </li>
             <li class="customers-element">
