--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
           <h2 class="visually-hidden">Strategy</h2>
           <ul class="list">
-            <li class-="list-elements">
+            <li class="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#antenna" />
@@ -81,7 +81,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li class-="list-elements">
+            <li class="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#clock" />
@@ -93,7 +93,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class-="list-elements">
+            <li class="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#diagram" />
@@ -105,7 +105,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class-="list-elements">
+            <li class="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#astronaut" />
